# lists

./: .gitignore  Cargo.toml  genjsdeps.sh  genproto.sh  package.json  run.sh  setup.sql  test.sh  testdata.sql  watchify.sh
js/: api_pb.js  app.js  model.js  sockets_api_pb.js
proto/: api.proto  sockets_api.proto  storage_format.proto
src/: annotations.rs  api.rs  cache.rs  data.rs  main.rs  model.rs  result.rs  scrape.rs  sockets_api.rs  storage_format.rs  streaming.rs  streeteasy.rs  util.rs  workqueue.rs
static/: app.js  deps.js  index.html  style.css
templates/: my-lists.html  one-list.html  pick-user.html
