[package]
name = "lists"
version = "0.1.0"
authors = ["Matt Jones <jonesmr@gmail.com>"]

[dependencies]
handlebars-iron = "*"
hyper = "*"
iron = "*"
kuchiki = "*"
mount = "*"
mysql = "*"
persistent = "*"
plugin = "*"
regex = "*"
router = "*"
rustful = "*"
rustc-serialize = "*"
staticfile = "*"
url = "*"
